2006-03-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Scanpackages.pm: Provide a way to get the path to the default cache.
	* Engine.pm: Make Engine::scanpackages more flexible.
	* Engine.pm, PkgVersion.pm: Accommodate changes to Engine::scanpackages.

2006-03-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm: Avoid circular dependency

2006-03-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm: Use FinkVersion::default_binary_version to determine
	if our distro has any bindists or not

2006-03-28  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Use default .info validator settings for dependencies
	in -m mode; use strict settings for explicitly requested pkgs

2006-03-28  Daniel Macks  <dmacks@netspace.org>

	* FinkVersion.pm.in: default_binary_version now returns undef if
	no known bindist

2006-03-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Config.pm, FinkVersion.pm.in: 10.4 has a bindist now

2006-03-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Use defaults for options.

2006-03-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Pre-calculate some of %to_be_rebuilt, to fix the case where:
		- a parent doesn't need a build, but a splitoff requires it, AND
		- the splitoff is considered by PACKAGELOOP after the parent

2006-03-24  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Hardcode path to unversioned perl.

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: tar doesn't need --exclude since fink_packages is
	now a complete explicit file list

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: switch fink_packagefiles to using
	MakeMaker (MANIFEST* in fink source root)

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Intel OS X now up to darwin8.5.3

2006-03-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Use new Buildlock::can_remove method

2006-03-23  Daniel Macks  <dmacks@netspace.org>
